--- a/sah.html
+++ b/sah.html
@@ -3,14 +3,12 @@
 	<head>
 		<title>sudoku</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="stylesudoku.css">
+		<link rel="stylesheet" type="text/css" href="stylezasah.css">
 	</head>
 	<body>
 		<div>
 			<table>
 				<tr>
-					<td></td>
-					<td></td>
 					<td></td>
 					<td><i class="glyphicon glyphicon-king"></i></td>
 					<td></td>
@@ -24,8 +22,6 @@
 					<td></td>
 					<td><span class="glyphicon glyphicon-knight"></span></td>
 					<td></td>
-					<td></td>
-					<td></td>
 					<td><span class="glyphicon glyphicon-knight"></span></td>
 					<td></td>
 					<td></td>
@@ -41,12 +37,8 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
-					<td></td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -60,8 +52,6 @@
 					<td><span class="glyphicon glyphicon-bishop"></span></td>
 					<td></td>
 					<td><span class="glyphicon glyphicon-bishop"></span></td>
-					<td></td>
-					<td></td>
 					<td></td>
 					<td><i class="glyphicon glyphicon-knight"></i></td>
 					<td><i class="glyphicon glyphicon-knight"></i></td>
@@ -77,8 +67,6 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
-					<td></td>
 				</tr>
 				<tr>
 					<td><i class="glyphicon glyphicon-knight"></i></td>
@@ -87,8 +75,6 @@
 					<td><i class="glyphicon glyphicon-knight"></i></td>
 					<td></td>
 					<td></td>
-					<td></td>
-					<td></td>
 					<td><span class="glyphicon glyphicon-bishop"></span></td>
 					<td></td>
 				</tr>
@@ -100,32 +86,6 @@
 					<td></td>
 					<td></td>
 					<td><span class="glyphicon glyphicon-bishop"></span></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td><span class="glyphicon glyphicon-bishop"></span></td>
-					<td></td>
-					<td></td>
-					<td><span class="glyphicon glyphicon-queen"></span></td>
-					<td><span class="glyphicon glyphicon-queen"></span></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td><span class="glyphicon glyphicon-queen"></span></td>
-					<td><span class="glyphicon glyphicon-queen"></span></td>
-					<td></td>
-					<td></td>
-					<td></td>
 					<td></td>
 				</tr>
 			</table>
